--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>My Github Page</h1>
     <p>This page is still underconstruction</p>
+    <p>This site will open soon</p>
 </body>
 </html>
