--- a/spa/index.html
+++ b/spa/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My Github Page</h1>
+    <h1>Single Page Application</h1>
     <p>This page is still underconstruction</p>
+    <p>This contains all Single Page Application</p>
 </body>
 </html>
