--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>My Github Page</h1>
     <p>This page is still underconstruction</p>
     <p>This site will open soon</p>
+    <a href="http://htmlpreview.github.io/?https://github.com/ArielLomoctos/portfolio/master/spa/index.html">Index HTML</a>
 </body>
 </html>
