css_zen_garden_001

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>My Github Page</h1>
     <p>This page is still underconstruction</p>
     <p>This site will open soon</p>
-    <a href="http://htmlpreview.github.io/?https://github.com/ArielLomoctos/portfolio/master/spa/index.html">Index HTML</a>
+    <a href="http://htmlpreview.github.io/?https://github.com/ArielLomoctos/portfolio/master/spa/css_zen_garden_001/index.html">css_zen_garden_001</a>
+    
 </body>
 </html>
