--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>My Github Page</h1>
     <p>This page is still underconstruction</p>
     <p>This site will open soon</p>
-    <a href="http://htmlpreview.github.io/?https://github.com/ArielLomoctos/portfolio/master/spa/css_zen_garden_001/index.html">css_zen_garden_001</a>
+    <a href="https://rawcdn.githack.com/ArielLomoctos/portfolio/75bfe4f090964b37804e2e951b9c9cebd67db7ab/spa/css_zen_garden_001/index.html">css_zen_garden_001</a>
     
 </body>
 </html>
